--- a/index.html
+++ b/index.html
@@ -58,5 +58,7 @@
         src="https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/front-end-web-development/so-reset-button.png"
       />
     </section>
+    <script src="script.js"></script>
+    <div></div>
   </body>
 </html>
